--- a/navbar.css
+++ b/navbar.css
@@ -10,7 +10,7 @@ nav {
 
 nav img{
     height: 10vh;
-    padding-left: 5vh;
+    padding-left: 8.1vw;
 }
 
 #nav-part2 {
@@ -70,7 +70,7 @@ nav img{
 #SignIn {
     padding: 10px 20px;
     border: 1px solid   #D9C65F;
-    border-radius: 5%;
+    border-radius: 8px;
     font-weight: 500;
     transition: all ease 0.4s;
     position: relative;
@@ -107,7 +107,7 @@ nav img{
 }
 
 #SignUp {
-    border-radius: 5%;
+    border-radius: 8px;
     padding: 10px 20px;
     border: 1px solid #000000;
     background-color: #D9C65F;
