--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,24 @@
 /* Global Styles */
+:root {
+    --color-primary: #6c63ff;
+    --color-success: #00bf8e;
+    --color-warning: #f7c94b;
+    --color-danger: #f75842;
+    --color-danger-variant: rgba(247, 88, 66, 0.4);
+    --color-white: #fff;
+    --color-light: rgba(255, 255, 255, 0.7);
+    --color-black: #000;
+    --color-bg1: #f8e787a9;
+    --color-bg2: #424890;
+  
+    --container-width-lg: 80%;
+    --container-width-md: 90%;
+    --container-width-sm: 94%;
+  
+    --transition: all ease 0.4s;
+
+}
+ 
 * {
     margin: 0;
     padding: 0;
@@ -25,7 +45,7 @@ html, body {
     height: 100vh;
     width: 100%;
     background-color: #f8e787a9;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
     padding: 5vw 4vw;
     font-size: 2vw;
 }
@@ -140,4 +160,205 @@ input[type="submit"]:hover {
     display: block;
     margin-top: 20px;
     font-size: 14px;
+}
+
+/* page1 part1 changes*/
+#center {
+    height: 77vh;
+    width: 100%;
+    background-color: #f8e787a9;
+    padding: 8vw 4vw;
+    display: flex;
+}
+
+#center img {
+    height: 28vw;
+    width: 50vw;
+    display: block;
+    padding-left: 2vw;
+}
+
+#center h2 {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 4.16vw; 
+  padding-bottom: 2vw;
+}
+
+#side{
+    padding-left: 6.5vw;
+}
+
+#side span{
+    color: #7c6e1f;
+}
+
+#side p{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  padding: 0vw 0vw 3vw;
+  font-size: 1.3vw; 
+}
+
+.box{
+    
+    height: 3vw;
+    width: 9vw;
+}
+
+.box a{
+  justify-content: center;
+}
+
+#center a{
+    font-size: vw;
+}
+
+/* PAGE2 Features */
+/* .categories {
+    background: var(--color-white);
+    height: 32rem;
+  }
+  .categories h1 {
+    line-height: 1;
+    margin-bottom: 3rem;
+  }
+  .categories_container {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    gap: 4rem; hve to comment this line out
+  }
+  .categories_left {
+    margin-right: 4rem;
+  }
+  .categories_left p {
+    margin: 1rem 0 3rem;
+  }
+  .categories_right {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.2rem;
+  }
+  .category {
+    background: var(--color-bg2);
+    padding: 2rem;
+    border-radius: 2rem;
+    transition: var(--transition);
+  }
+  .category:hover {
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
+    z-index: 1;
+  }
+  .category:nth-child(2) .category_icon {
+    background: var(--color-danger);
+  }
+  .category:nth-child(3) .category_icon {
+    background: var(--color-success);
+  }
+  .category:nth-child(4) .category_icon {
+    background: var(--color-warning);
+  }
+  .category:nth-child(5) .category_icon {
+    background: var(--color-success);
+  }
+  .category_icon {
+    background: var(--color-primary);
+    padding: 0.7rem;
+    border-radius: 0.9rem;
+  }
+  .category h5 {
+    margin: 2rem 0 1rem;
+  }
+  .category p {
+    font-size: 0.85rem;
+  } */
+
+#working h3{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 3vw;
+  margin-left: 35vw;
+  margin-top: 3vw;
+  color: #7c6e1f;
+}
+
+#working img{
+  height: 18vw;
+  width: 18vw;
+  margin-left: 43vw;
+}  
+
+/* Dshboard changes */
+/* .container{
+  
+} */
+
+footer {
+  background: var(--color-bg1);
+  padding-top: 5rem;
+  font-size: 1.1rem;
+}
+.footer_container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5rem;
+  margin-left: 9vw;
+}
+footer a{
+  text-decoration: none;
+}
+.footer_container > div h4 {
+  margin-bottom: 1.2rem;
+}
+.footer_1 p {
+  margin: 0 0 2rem;
+}
+footer ul li {
+  margin-bottom: 0.7rem;
+}
+footer ul li a:hover {
+  text-decoration: underline;
+}
+.footer_socials {
+  display: flex;
+  gap: 1rem;
+  font-size: 1.2rem;
+  margin-top: 2rem;
+}
+.footer_copyright {
+  text-align: center;
+  margin-top: 4rem;
+  padding: 1.2rem 0;
+  border-top: 1px solid var(--color-bg2);
+}
+
+/* about changes */
+#side2{
+  padding: 0vw 6vw 0vw 6vw;
+  height: 20vw;
+  width: 100vw;
+}
+
+#side2 h2{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  padding: 0vw 0vw 3vw;
+  font-size: 4vw; 
+}
+
+#side2 p{
+font-family: "Inter", sans-serif;
+font-optical-sizing: auto;
+font-weight: 300;
+font-style: normal;
+padding: 0vw 0vw 3vw;
+font-size: 1.3vw; 
 }
